--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 「もっと見る」リンク -->
-                <a href="javascript:void(0);" class="more-link" onclick="toggleLunchMenu()">すべて見る</a>
+               
             </div>
         </div>
     </div>
@@ -206,8 +205,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 「もっと見る」リンク -->
-                <a href="javascript:void(0);" class="more-link" onclick="toggleDinnerMenu()">すべて見る</a>
+
             </div>
         </div>
     </div>
@@ -220,50 +218,45 @@
         料理写真
     </h1>
     
-
-
-
-  
-<!-- 画像スライダー -->
-
 <!-- 画像スライダー -->
 <div class="image-slider-container">
     <div class="slider">
-        <div class="slide" id="slide1">
+        <div class="slide">
             <img src="img/料理①.jpg" alt="Image 1">
         </div>
-        <div class="slide" id="slide2">
+        <div class="slide">
             <img src="img/料理②.jpg" alt="Image 2">
         </div>
-        <div class="slide" id="slide3">
+        <div class="slide">
             <img src="img/料理③.jpg" alt="Image 3">
         </div>
-        <div class="slide" id="slide4">
+        <div class="slide">
             <img src="img/料理③-1.jpg" alt="Image 4">
         </div>
-        <div class="slide" id="slide5">
+        <div class="slide">
             <img src="img/料理④.jpg" alt="Image 5">
         </div>
-        <div class="slide" id="slide6">
+        <div class="slide">
             <img src="img/料理⑤.jpg" alt="Image 6">
         </div>
-        <div class="slide" id="slide7">
+        <div class="slide">
             <img src="img/料理⑥.jpg" alt="Image 7">
         </div>
-        <div class="slide" id="slide8">
+        <div class="slide">
             <img src="img/料理⑦.jpg" alt="Image 8">
         </div>
-        <div class="slide" id="slide9">
+        <div class="slide">
             <img src="img/料理⑧.jpg" alt="Image 9">
         </div>
-        <div class="slide" id="slide10">
+        <div class="slide">
             <img src="img/料理⑨.jpg" alt="Image 10">
         </div>
-        <div class="slide" id="slide11">
+        <div class="slide">
             <img src="img/料理⑩.jpg" alt="Image 11">
         </div>
     </div>
     <div class="dots-container">
+        <!-- 各ドット -->
         <span class="dot active"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -280,8 +273,6 @@
     <button class="prev" id="prevButton">&#10094;</button>
     <button class="next" id="nextButton">&#10095;</button>
 </div>
-
-
 
 
     <!-- Blog section -->
