--- a/index.html
+++ b/index.html
@@ -116,17 +116,15 @@
     <img src="img/店.jpg" alt="店の写真" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
 </section>
 
+<h1 style="text-align: center; margin: 0 30px; background-color: white; padding: 40px 10px 0px !important;">
+    メニュー
+</h1>
 <!-- ランチメニューセクション -->
 <section id="lunch-services" style="margin-left: 30px; margin-right: 30px;">
     
-    <!-- 動画 -->
-    <div class="video-wrapper">
-        <video autoplay muted loop>
-            <source src="mv/ランチ動画.mp4" type="video/mp4">
-            <source src="mv/ランチ動画.webm" type="video/webm">
-            <source src="mv/ランチ動画.ogv" type="video/ogg">
-            Your browser does not support the video tag.
-        </video>
+    <!-- 画像 -->
+    <div class="image-wrapper">
+        <img src="img/ランチメニュー.jpg" alt="ランチメニュー" />
     </div>
 
     <!-- 背景を白いもやに変更 -->
@@ -168,14 +166,9 @@
 
 <!-- ディナーメニューセクション -->
 <section id="dinner-services" style="margin-left: 30px; margin-right: 30px;">
-    <!-- 動画 -->
-    <div class="video-wrapper">
-        <video autoplay muted loop>
-            <source src="mv/ディナー動画.mp4" type="video/mp4">
-            <source src="mv/ディナー動画.webm" type="video/webm">
-            <source src="mv/ディナー動画.ogv" type="video/ogg">
-            Your browser does not support the video tag.
-        </video>
+    <!-- 画像 -->
+    <div class="image-wrapper">
+        <img src="img/ディナー.jpg" alt="ディナーメニュー" />
     </div>
 
     <!-- 背景を白いもやに変更 -->
@@ -215,7 +208,10 @@
 
 
 
-
+<!-- 料理写真 見出し -->
+<h1 style="text-align: center; margin: 0 30px; background-color: white; padding: 30px 10px 10px;">
+    料理写真
+</h1>
 <!-- 画像スライダー -->
 <!-- 画像スライダー -->
 <!-- 画像スライダー -->
