--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <section id="dinner-services" style="margin-left: 30px; margin-right: 30px;">
     <!-- 画像 -->
     <div class="image-wrapper">
-        <img src="img/ディナー.jpg" alt="ディナーメニュー" />
+        <img src="img/ディナーメニュー.jpg" alt="ディナーメニュー" />
     </div>
 
     <!-- 背景を白いもやに変更 -->
