--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container">
         <div class="row mb-4">
             <div class="col-md-8 mx-auto text-center">
-                <h1>ランチメニュー</h1>
+                <h1>ランチ</h1>
                 <p>10:00~(ラストオーダー14:00)</p>
                 <p>毎日異なるメニューを提供しております。</p>
                 <br>
@@ -168,7 +168,7 @@
 <section id="dinner-services" style="margin-left: 30px; margin-right: 30px;">
     <!-- 画像 -->
     <div class="image-wrapper">
-        <img src="img/ディナーメニュー.jpg" alt="ディナーメニュー" />
+        <img src="img/DM.jpg" alt="ディナーメニュー" />
     </div>
 
     <!-- 背景を白いもやに変更 -->
@@ -178,7 +178,7 @@
     <div class="container">
         <div class="row mb-4">
             <div class="col-md-8 mx-auto text-center">
-                <h1>ディナーメニュー</h1>
+                <h1>ディナー</h1>
                 <p>17:00~(ラストオーダー20:00)</p>
                 <p>毎日異なるメニューを提供しております。</p>
                 <div class="row">
