--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
   
 
    <!-- 店の写真 -->
-   <section class="image-section" style="margin-left: 30px; margin-right: 30px; margin-bottom: 50px; background-color: white;">
+   <section class="image-section" style="margin-left: 30px; margin-right: 30px; margin-bottom: 0px; background-color: white;">
     <img src="img/店.jpg" alt="店の写真" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
 </section>
 
-<h1 style="text-align: center; margin: 0 30px; background-color: white; padding: 40px 10px 0px !important;">
+<h1 style="text-align: center; margin: 0 30px; background-color: white; padding: 40px 10px 0px !important; margin-top: 0;">
     メニュー
 </h1>
+
+
 <!-- ランチメニューセクション -->
 <section id="lunch-services" style="margin-left: 30px; margin-right: 30px;">
     
